fix shaky effect on mobile scroll

--- a/src/assets/styles/home/home.scss
+++ b/src/assets/styles/home/home.scss
@@ -26,7 +26,7 @@
   }
 
   .bg-video {
-    width: 90%;
+    width: 97%;
     padding-top: 10%;
   }
 
@@ -339,7 +339,7 @@
       flex-direction: column;
       padding: 2.63rem;
       gap: 10px;
-      background: url(./assets/imgs/index/border.png);
+      background: url(../../imgs/index/border.png);
       background-size: 100.6% 101.5%;
 
       .carousel-img {
@@ -381,7 +381,7 @@
         grid-template-columns: 1fr 1fr;
         width: 80%;
         gap: 50px;
-        margin-top: 110px;      
+        margin-top: 110px;
         .left {
           align-self: center;
           display: flex;
@@ -441,7 +441,6 @@
           flex-direction: column;
           gap: 1rem;
           margin: auto;
-    
 
           div {
             color: #fff;
@@ -648,12 +647,13 @@
     .board1 {
       .top {
         margin: auto 0%;
+        padding:0 1.5rem;
         .pinlink-logo {
           width: 12.5rem;
           height: 2.41581rem;
         }
         .board1-title {
-          font-size: 2.3rem;
+          font-size: 2rem;
           line-height: 3.23475rem;
         }
         .board1-desc {
@@ -732,6 +732,15 @@
         gap: 25vh;
         .keysItem {
           width: 100%;
+          gap:1rem;
+          .step-title {
+            font-size: 1.75rem;
+            line-height: 2.6rem;
+          }
+          .step-desc {
+            font-size: 1rem;        
+            line-height: 1.5rem;
+          }
         }
       }
     }
@@ -859,6 +868,5 @@
     }
   }
   @media screen and (max-width: 390px) {
-   
   }
 }
